WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104626
REGRESSION(
r137215
): WebKit stretches and shrinks a part of screen on scroll
https://bugs.webkit.org/show_bug.cgi?id=104626
Summary
REGRESSION(r137215): WebKit stretches and shrinks a part of screen on scroll
Ryosuke Niwa
Reported
2012-12-10 20:35:51 PST
I’m observing this behavior where I see WebKit stretching & shrinking a part of page when I scroll Gmail’s vertical preview pane.
Attachments
screenshot 1
(54.83 KB, image/png)
2012-12-10 20:36 PST
,
Ryosuke Niwa
no flags
Details
screenshot 2
(83.53 KB, image/png)
2012-12-10 20:36 PST
,
Ryosuke Niwa
no flags
Details
Patch
(8.06 KB, patch)
2012-12-10 21:46 PST
,
Simon Fraser (smfr)
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-12-10 20:36:07 PST
Created
attachment 178700
[details]
screenshot 1
Ryosuke Niwa
Comment 2
2012-12-10 20:36:47 PST
Created
attachment 178701
[details]
screenshot 2
Simon Fraser (smfr)
Comment 3
2012-12-10 20:40:42 PST
Probably caused by
http://trac.webkit.org/changeset/137215
Simon Fraser (smfr)
Comment 4
2012-12-10 21:46:17 PST
Created
attachment 178707
[details]
Patch
Simon Fraser (smfr)
Comment 5
2012-12-10 21:55:48 PST
http://trac.webkit.org/changeset/137248
Simon Fraser (smfr)
Comment 6
2012-12-11 22:56:55 PST
This undid the fix for
bug 104461
. There's a patch there to fix that.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug