Source/WebCore: REGRESSION (r137215): WebKit stretches and shrinks a part of screen on scroll https://bugs.webkit.org/show_bug.cgi?id=104626

Reviewed by Beth Dakin.

r137215 removed a compositing layer repaint on size changes. However, there
are cases where the compositing code constrains layer size by clipping
with the viewport and a clipping ancestor. When that happens, we must
invalidate the layer on a size change to avoid showing stretched or
shrunken content.

Test: compositing/repaint/clipped-layer-size-change.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::RenderLayerBacking):
(WebCore::RenderLayerBacking::updateCompositedBounds):
(WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):
* rendering/RenderLayerBacking.h:
(RenderLayerBacking):

LayoutTests: REGRESSION(r137215): WebKit stretches and shrinks a part of screen on scroll
https://bugs.webkit.org/show_bug.cgi?id=104626

Reviewed by Beth Dakin.

Testcase that scrolls an overflow area containing a compositing layer.

* compositing/repaint/clipped-layer-size-change-expected.html: Added.
* compositing/repaint/clipped-layer-size-change.html: Added.

Canonical link: https://commits.webkit.org/122803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137248 268f45cc-cd09-0410-ab3c-d52691b4dbfc